# orchestration_

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  startup.txt
Data/: AI_Knowledge_Base.json  AI_Knowledge_Base.txt  Prompts_Orchestrator.docx  Prompts_Orchestrator_V2.docx  Requirements_Slot_Matrix_Example_with_Questions_reduced.xlsx  Technical_Matrix_Slot_keyinfo.json  test_query.txt
agents/: __init__.py  requirement_agent.py  state.py
agents/knowledge/: __init__.py  knowledge_base.py  technical_matrix.py
agents/nodes/: __init__.py  classify_clarification_answers.py  create_slot_subqueries.py  finalize_slot_subqueries.py  llm_usage.py  understand_requirement_intent.py  wait_for_clarification.py  wait_for_slot_clarification.py
app/: __init__.py  cli.py  server.py
app/routes/: requirement_agent.py
app/static/: app.js  index.html  styles.css
core/: __init__.py  config.py  llm.py
tests/: test_app.py  test_cli.py  test_config.py
