[project]
name = "orchestartion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "langchain>=1.3.0,<2.0.0",
    "langchain-openai>=1.3.0,<2.0.0",
    "langgraph>=1.2.0,<2.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "python-socketio>=5.16.1,<6.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
]

[project.scripts]
requirement-agent = "app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
